--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<center>
 		<div class="cards">
 	  <div class="card">
-	    <img src="images/menu.jpg" alt="Entrées Froides">
+	    <img src="images/menu.JPG" alt="Entrées Froides">
 	    <h3>Entrées</h3>
     </div>
 
