--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
     </div>
 
     <div class="card">
-	    <img src="images/Pates.jpg" alt="Pates, Risotos et Pizzas">
+	    <img src="images/Pates.JPG" alt="Pates, Risotos et Pizzas">
 	    <h3>Plats</h3>
     </div>
 
     <div class="card">
-	    <img src="images/dessert.jpg" alt="dessert">
+	    <img src="images/dessert.JPG" alt="dessert">
 	    <h3>Désserts</h3>
     </div>
 
     <div class="card">
-	    <img src="images/coktails.jpg" alt="Coktails">
+	    <img src="images/coktails.JPG" alt="Coktails">
 	    <h3>Coktails</h3>
     </div>
 
     <div class="card">
-	    <img src="images/Tapas.jpg" alt="Tapas">
+	    <img src="images/Tapas.JPG" alt="Tapas">
 	    <h3>Tapas</h3>
     </div>
 
